# contract-review-cli

./: .env.example  .gitignore  README.md  pyproject.toml  sample_contract.txt  worklog.md
.agent/: Task.md  agent.md  plan.md
.agent/shared/: HANDOFF.md  context.md
src/contract_review/: __init__.py  cli.py  redaction.py
src/contract_review/analyzer/: __init__.py  differ.py  reviewer.py  suggester.py  type_detector.py
src/contract_review/llm/: __init__.py  base.py  claude_client.py  gemini_client.py  openai_client.py
src/contract_review/models/: __init__.py  clause.py  diff.py  review.py
src/contract_review/parser/: __init__.py  pdf_parser.py  text_parser.py
src/contract_review/prompts/: __init__.py  diff_prompts.py  review_prompts.py  suggest_prompts.py
src/contract_review/report/: __init__.py  json_report.py  md_report.py
tests/: test_analyzer.py  test_cli.py  test_llm_clients.py  test_models.py  test_parser.py  test_redaction.py
