[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-review"
version = "0.1.0"
description = "한국 법령 기반 계약서 자동 검토 CLI 도구"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["contract", "review", "korean-law", "legal", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.11",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
]

# LLM 백엔드는 각 CLI 도구를 직접 사용합니다 (API 키 불필요):
#   Claude : claude CLI (Claude Code)  → https://claude.ai/code
#   Gemini : gemini CLI                → https://ai.google.dev/gemini-api/docs/gemini-cli
#   OpenAI : codex CLI (Codex CLI)     → https://github.com/openai/codex

[project.scripts]
contract-review = "contract_review.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/contract-review"
Repository = "https://github.com/yourusername/contract-review"
Issues = "https://github.com/yourusername/contract-review/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
